BOAC-1564 Fix sidebar/content misalignment in Vue

--- a/boac/static/app/main.css
+++ b/boac/static/app/main.css
@@ -61,7 +61,6 @@
 .body-text {
   font-size: 16px;
   line-height: 1.4em;
-  min-height: 100%;
 }
 
 .btn-search-students {
